--- a/index.html
+++ b/index.html
@@ -7,7 +7,111 @@
     <title>E-Learn</title>
   </head>
   <body>
+    <header class="fixed w-full left-0 top-0 bg-brightRedSupLight">
+      <nav class="container flex items-center justify-between mx-auto p-6">
+        <a class="header-logo relative p-6" href="#">
+          <img src="src/icons/logo.svg" alt="logo" width="100" height="40" />
+        </a>
 
+        <div id="menu"
+          class="flex items-center absolute top-[-300%] left-[50%] translate-x-[-50%] duration-200 ease-out md:relative md:left-0 md:translate-x-0">
+          <ul
+            class="flex items-center flex-col gap-[16px] mb-5 md:flex-row md:gap-[25px] md:mb-0 md:mr-5 lg:gap-[50px] lg:mr-[50px]">
+            <li>
+              <a href="#" class="text-titleColor hover:text-brightRed duration-100 ease-in">Home</a>
+            </li>
+            <li>
+              <a href="#" class="text-titleColor hover:text-brightRed duration-100 ease-in">Careers</a>
+            </li>
+            <li>
+              <a href="#" class="text-titleColor hover:text-brightRed duration-100 ease-in">Blog</a>
+            </li>
+            <li>
+              <a href="#" class="text-titleColor hover:text-brightRed duration-100 ease-in">About Us</a>
+            </li>
+          </ul>
+
+          <div class="flex items-center flex-col gap-[10px] md:flex-row lg:gap-[30px]">
+            <a href="#"
+              class="py-[11px] px-[30px] rounded-[80px] text-[15px] text-black bg-white font-medium hover:bg-black hover:text-white duration-200 ease-in md:text-[16px] md:px-[35px] lg:px-[45px] lg:py-[13px">Login</a>
+            <a href="#"
+              class="py-[9px] px-[30px] rounded-[80px] border-2 border-black text-[15px] text-white bg-black font-medium hover:bg-transparent hover:text-black duration-200 ease-in md:text-[16px] md:px-[35px] lg:px-[45px] lg:py-[9px]">Sign
+              Up</a>
+          </div>
+        </div>
+
+        <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
+          <span class="hamburger-top"></span>
+          <span class="hamburger-middle"></span>
+          <span class="hamburger-bottom"></span>
+        </button>
+      </nav>
+    </header>
+
+    <main>
+      <section id="home" class="pt-24 bg-brightRedSupLight rounded-b-[22%]">
+        <div class="container mx-auto px-6 relative">
+          <div class="pt-[160px] pb-[200px]">
+            <h1 class="max-w-[750px] font-semibold text-[60px] leading-[80px] text-titleColor mb-[30px]">
+              Learn New Skill Gain More <span>Education</span>
+            </h1>
+            <p class="max-w-[500px] font-normal text-[20px] text-descriptionColor leading-[160%] mb-[50px]">
+              eLearn is an interesting platform that will teach you in more an interactive way
+            </p>
+            <div class="flex">
+              <a href="#"
+                class="font-semibold text-[15px] text-white py-[20px] px-[35px] bg-brightRed rounded-[80px] border-2 border-brightRed hover:bg-transparent hover:text-brightRed duration-200">
+                Join for free
+              </a>
+              <a href="#" class="flex items-center ml-[30px] font-normal text-[18px] text-titleColor">
+                <img class="w-[60px] py-[20px] pl-[28px] pr-[18px] rounded-full bg-white mr-[30px]"
+                  src="src/icons/pause.svg" alt="icon" />
+                Watch how it works
+              </a>
+            </div>
+          </div>
+
+          <div>
+            <div
+              class="max-w-[250px] flex items-center bg-white bg-opacity-[0.8] rounded-[20px] p-[20px] absolute top-[24%] left-[550px]">
+              <div class="w-[50px] p-[11px] rounded-[8px] bg-[#23BDEE] mr-[30px]">
+                <img src="src/icons/calendar.svg" alt="calendar" />
+              </div>
+              <div class="text-descriptionColor">
+                <h5 class="font-semibold text-[17px]">250k</h5>
+                <p class="font-medium text-[15px]">Assisted Student</p>
+              </div>
+            </div>
+
+            <div
+              class="max-w-[330px] flex items-center bg-white bg-opacity-[0.8] rounded-[20px] p-[20px] absolute top-[40%] right-0">
+              <div class="w-[50px] p-[11px] rounded-[8px] bg-[#F88C3D] mr-[30px]">
+                <img src="src/icons/email.svg" alt="email" />
+              </div>
+              <div class="text-descriptionColor">
+                <h5 class="font-semibold text-[17px]">Congratulations</h5>
+                <p class="font-medium text-[15px]">Your admission completed</p>
+              </div>
+            </div>
+
+            <div
+              class="max-w-[330px] flex items-start bg-white bg-opacity-[0.8] rounded-[20px] p-[20px] absolute top-[55%] left-[550px]">
+              <div class="w-[50px] h-[50px] mr-[30px]">
+                <img src="src/images/man-home.png" alt="email" />
+              </div>
+              <div class="text-descriptionColor">
+                <h5 class="font-semibold text-[17px]">User Experience Class</h5>
+                <p class="font-medium text-[15px] mb-[20px]">Today at 12.00 PM</p>
+                <a href="#"
+                  class="inline-block bg-black text-white font-semibold rounded-[80px] py-[9px] px-[30px] border-2 border-black hover:bg-transparent hover:text-black duration-200">
+                  Join Now
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <script src="src/js/script.js"></script>
   </body>
