added title line

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           class="container mx-auto px-6 relative flex flex-col items-center justify-between xl:flex-row xl:items-start">
           <div class="pt-[120px] text-center xl:text-left md:pt-[180px]">
             <h1
-              class="max-w-[750px] font-semibold text-titleColor text-[30px] leading-[45px] mb-[20px] mx-auto xl:mx-0 md:leading-[70px] md:text-[60px] sm:text-[40px] sm:mb-[30px]">
-              Learn New Skill Gain More <span>Education</span>
+              class="max-w-[750px] font-semibold text-titleColor text-[30px] leading-[45px] mb-[15px] mx-auto xl:mx-0 md:leading-[70px] md:text-[60px] sm:text-[40px] sm:mb-[25px]">
+              Learn New Skill Gain More <span class="home__line px-[12px]">Education</span>
             </h1>
             <p
               class="max-w-[500px] font-normal text-descriptionColor leading-[160%] mb-[30px] text-[15px] mx-auto xl:mx-0 md:text-[20px] sm:text-[18px] sm:mb-[50px]">
@@ -74,7 +74,7 @@
             </div>
           </div>
 
-          <div class="home__container mt-[100px] sm:mt-0">
+          <div class="home__image mt-[100px] sm:mt-0">
             <div
               class="w-[200px] flex items-center bg-white bg-opacity-[0.8] rounded-[20px] p-[20px] absolute top-[45%] left-[20px] sm:left-[15%] sm:w-[250px] xl:top-[31%] xl:left-[580px]">
               <div class="w-[20] sm:w-[50px] p-[11px] rounded-[8px] bg-[#23BDEE] mr-[15px] sm:mr-[30px]">
