added elearn section

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
           <div class="flex items-center flex-col gap-[10px] md:flex-row lg:gap-[30px]">
             <a href="#"
-              class="py-[11px] px-[30px] rounded-[80px] text-[15px] text-black bg-white font-medium hover:bg-black hover:text-white duration-200 ease-in md:text-[16px] md:px-[35px] lg:px-[45px] lg:py-[13px">Login</a>
+              class="btn text-[15px] text-black bg-white font-medium hover:bg-black hover:text-white duration-200 ease-in">Login</a>
             <a href="#"
-              class="py-[9px] px-[30px] rounded-[80px] border-2 border-black text-[15px] text-white bg-black font-medium hover:bg-transparent hover:text-black duration-200 ease-in md:text-[16px] md:px-[35px] lg:px-[45px] lg:py-[9px]">Sign
+              class="btn shadow-[inset_0px_0px_2px_1px_rgba(0,0,0,1)] text-[15px] text-white bg-black font-medium hover:bg-transparent hover:text-black duration-200 ease-in">Sign
               Up</a>
           </div>
         </div>
@@ -57,18 +57,18 @@
               class="max-w-[750px] font-semibold text-titleColor text-[30px] leading-[45px] mb-[15px] mx-auto xl:mx-0 md:leading-[70px] md:text-[60px] sm:text-[40px] sm:mb-[25px]">
               Learn New Skill Gain More <span class="home__line px-[12px]">Education</span>
             </h1>
-            <p
-              class="max-w-[500px] font-normal text-descriptionColor leading-[160%] mb-[30px] text-[15px] mx-auto xl:mx-0 md:text-[20px] sm:text-[18px] sm:mb-[50px]">
+            <p class="section-description max-w-[500px] mb-[30px] mx-auto xl:mx-0 sm:mb-[50px]">
               eLearn is an interesting platform that will teach you in more an interactive way
             </p>
             <div class="flex justify-center items-center flex-col gap-[25px] sm:flex-row xl:justify-start">
               <a href="#"
-                class="font-semibold text-[12px] text-white py-[18px] px-[35px] bg-brightRed rounded-[80px] border-2 border-brightRed hover:bg-transparent hover:text-brightRed duration-200 md:text-[15px]">
+                class="btn font-semibold text-[12px] text-white bg-brightRed border-2 border-brightRed hover:bg-transparent hover:text-brightRed duration-200 md:text-[15px]">
                 Join for free
               </a>
-              <a href="#" class="flex items-center font-normal text-[12px] text-titleColor md:text-[18px]">
-                <img class="w-[60px] py-[20px] pl-[28px] pr-[18px] rounded-full bg-white mr-[15px] md:mr-[30px]"
-                  src="src/icons/pause.svg" alt="icon" />
+              <a href="#" class="section-description flex items-center">
+                <span class="px-[20px] py-[16px] rounded-full bg-white mr-[15px] md:mr-[30px]">
+                  <img class="w-[20px] mx-auto" src="src/icons/pause.svg" alt="icon" />
+                </span>
                 Watch how it works
               </a>
             </div>
@@ -110,6 +110,150 @@
                   Join Now
                 </a>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="mt-[50px]">
+        <div class="container mx-auto p-6">
+          <div class="mb-[100px] md:mb-[148px]">
+            <h5 class="text-center text-[18px] font-normal text-descriptionColor mb-[40px] sm:text-[25px]">
+              Trusted by 5,000+ Companies Worldwide
+            </h5>
+
+            <div class="flex items-center justify-center flex-wrap gap-[40px]">
+              <img class="w-[120px] md:w-[150px]" src="src/images/google.png" height="50" alt="image" />
+              <img class="w-[120px] md:w-[150px]" src="src/images/netflix.png" height="50" alt="image" />
+              <img class="w-[120px] md:w-[150px]" src="src/images/airbnb.png" height="50" alt="image" />
+              <img class="w-[120px] md:w-[150px]" src="src/images/amazon.png" height="50" alt="image" />
+              <img class="w-[120px] md:w-[150px]" src="src/images/facebook.png" height="50" alt="image" />
+              <img class="w-[120px] md:w-[150px]" src="src/images/grab-logo.png" height="50" alt="image" />
+            </div>
+          </div>
+
+          <div>
+            <h2 class="section-title text-center mb-[20px]">Why we are best?</h2>
+            <p class="section-description max-w-[620px] mx-auto text-center mb-[100px] md:mb-[150px]">
+              eLearn is one powerful online software suite that combines all the tools needed to run a successful school
+              or office.
+            </p>
+
+            <ul class="grid grid-cols-1 gap-[40px] lg:grid-cols-3 md:grid-cols-2">
+              <li
+                class="flex flex-col justify-between relative w-full p-[20px] text-center rounded-xl shadow-[0_5px_25px_5px_rgba(0,0,0,0.1)] xl:p-[50px]">
+                <div
+                  class="absolute top-[-18%] left-[50%] translate-x-[-50%] w-[65px] h-[65px] flex items-center mx-auto bg-[#5B72EE] rounded-full text-center md:w-[80px] md:h-[80px] md:top-[-12%]">
+                  <img class="w-[30px] h-[30px] mx-auto" src="src/icons/file-invoice.svg" alt="icon" />
+                </div>
+                <h4 class="font-medium text-[18px] mb-[24px] pt-[40px] md:text-[22px]">
+                  Online Billing, Invoicing, & Contracts
+                </h4>
+                <p class="section-description">
+                  Simple and secure control of your organization’s financial and legal transactions. Send customized
+                  invoices and
+                  contracts
+                </p>
+              </li>
+
+              <li
+                class="flex flex-col justify-between relative w-full p-[20px] text-center rounded-xl shadow-[0_5px_25px_5px_rgba(0,0,0,0.1)] xl:p-[50px]">
+                <div
+                  class="absolute top-[-18%] left-[50%] translate-x-[-50%] w-[65px] h-[65px] flex items-center mx-auto bg-[#EA5972] rounded-full text-center md:w-[80px] md:h-[80px] md:top-[-12%]">
+                  <img class="w-[30px] h-[30px] mx-auto" src="src/icons/calendar.svg" alt="icon" />
+                </div>
+                <h4 class="font-medium text-[18px] mb-[24px] pt-[40px] md:text-[22px]">
+                  Easy Scheduling & Attendance Tracking
+                </h4>
+                <p class="section-description">
+                  Schedule and reserve classrooms at one campus or multiple campuses. Keep detailed records of student
+                  attendance
+                </p>
+              </li>
+
+              <li
+                class="flex flex-col justify-between relative w-full p-[20px] text-center rounded-xl shadow-[0_5px_25px_5px_rgba(0,0,0,0.1)] xl:p-[50px]">
+                <div
+                  class="absolute top-[-18%] left-[50%] translate-x-[-50%] w-[65px] h-[65px] flex items-center mx-auto bg-[#29B9E7] rounded-full text-center md:w-[80px] md:h-[80px] md:top-[-12%]">
+                  <img class="w-[30px] h-[30px] mx-auto" src="src/icons/users.svg" alt="icon" />
+                </div>
+                <h4 class="font-medium text-[18px] mb-[24px] pt-[40px] md:text-[22px]">
+                  Customer Tracking
+                </h4>
+                <p class="section-description">
+                  Simple and secure control of your organization’s financial and legal transactions. Send customized
+                  invoices and
+                  contracts
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section class="pt-[70px]">
+        <div class="container mx-auto p-6">
+          <h2 class="section-title text-center mb-[20px]">
+            What is eLearn?
+          </h2>
+          <p class="section-description max-w-[1000px] mx-auto text-center mb-[80px]">
+            eLearn is a platform that allows educators to create online classes whereby they can store the course
+            materials online;
+            manage assignments, quizzes and exams; monitor due dates; grade results and provide students with feedback
+            all in one
+            place.
+          </p>
+
+          <ul
+            class="flex items-center justify-center flex-col gap-[30px] mb-[100px] md:mb-[160px] md:flex-row md:gap-[60px]">
+            <li class="relative max-w-[500px]">
+              <img src="src/images/instructor.png" alt="image" />
+              <div class="absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%]">
+                <h4 class="text-white md:text-[20px] font-semibold mb-[17px] text-center">
+                  FOR INSTRUCTORS
+                </h4>
+                <a href="#"
+                  class="block w-[150px] text-[14px] lg:w-[220px] text-center py-[20px] rounded-[80px] border-2 border-white font-medium text-white lg:text-[18px] hover:bg-white hover:text-black duration-200">
+                  Start a class today
+                </a>
+              </div>
+            </li>
+
+            <li class="relative max-w-[500px]">
+              <img src="src/images/student.png" alt="image" />
+              <div class="absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%]">
+                <h4 class="text-white md:text-[20px] font-semibold mb-[17px] text-center">
+                  FOR STUDENTS
+                </h4>
+                <a href="#"
+                  class="block w-[150px] text-[14px] lg:w-[220px] text-center py-[20px] rounded-[80px] border-2 border-brightRed font-medium text-white lg:text-[18px] bg-brightRed hover:bg-transparent duration-200">
+                  Enter access code
+                </a>
+              </div>
+            </li>
+          </ul>
+
+          <div class="flex items-center justify-between flex-col text-center md:flex-row md:text-left">
+            <div class="max-w-[550px] mb-10 md:mb-0">
+              <h3 class="text-[20px] font-medium mb-[30px] xl:text-[30px]">
+                Everything you can do in a physical classroom, you can do with eLearn
+              </h3>
+              <p class="section-description mb-[30px]">
+                elearn’s school management software helps traditional and online schools manage scheduling, attendance,
+                payments and
+                virtual classrooms all in one secure cloud-based system.
+              </p>
+              <a href="#" class="text-[#272727] underline hover:no-underline">Learn more</a>
+            </div>
+
+            <div class="elearn__image p-4 relative lg:p-6">
+              <a href="#" class="block w-full h-[250px] sm:w-[400px] lg:w-[500px] lg:h-[350px]">
+                <img class="w-full h-full" src="src/images/confident.png" alt="image" />
+                <button
+                  class="absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] px-[20px] py-[18px] bg-white rounded-full">
+                  <img src="src/icons/pause.svg" alt="icon" />
+                </button>
+              </a>
             </div>
           </div>
         </div>
