added feature section

--- a/index.html
+++ b/index.html
@@ -251,10 +251,212 @@
                 <img class="w-full h-full" src="src/images/confident.png" alt="image" />
                 <button
                   class="absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] px-[20px] py-[18px] bg-white rounded-full">
-                  <img src="src/icons/pause.svg" alt="icon" />
+                  <img class="w-[18px] h-[18px]" src="src/icons/pause.svg" alt="icon" />
                 </button>
               </a>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container mx-auto p-6">
+          <h2 class="section-title text-center mb-[20px]">
+            Our Features
+          </h2>
+          <p class="section-description max-w-[700px] mx-auto text-center mb-[80px]">
+            This very extraordinary feature, can make learning activities more efficient
+          </p>
+
+          <div class="flex items-center justify-between flex-col mb-[80px] md:mb-[160px] md:flex-row">
+            <div class="relative max-w-[500px] xl:max-w-[650px]">
+              <img src="src/images/feature.png" alt="image" />
+              <a href="#"
+                class="w-[50px] h-[50px]  flex items-center absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] bg-white rounded-full border-[8px] border-[rgba(180,180,180,0.5)] shadow-xl sm:w-[65px] sm:h-[65px]">
+                <img class="w-[20px] sm:w-[30px] mx-auto" src="src/icons/surface.svg" alt="icon" />
+              </a>
+            </div>
+
+            <div class="w-full text-center md:w-[550px] md:text-left">
+              <h3 class="feature__subtitle mb-[30px] lg:mb-[50px]">
+                A user interface designed for the classroom
+              </h3>
+
+              <ul class="flex flex-col items-center md:block">
+                <li class="mb-[40px] flex items-center">
+                  <div
+                    class="px-[15px] h-[50px] flex items-center bg-white rounded-full shadow-md mr-[20px] lg:mr-[40px]">
+                    <img class="w-[20px] h-[20px] mx-auto md:w-[35px] md:h-[30px]" src="src/icons/square-feature.svg"
+                      alt="icon" />
+                  </div>
+
+                  <p class="section-description text-left">
+                    Teachers don’t get lost in the grid view and have a dedicated Podium space.
+                  </p>
+                </li>
+                <li class="mb-[40px] flex items-center">
+                  <div
+                    class="px-[15px] h-[50px] flex items-center bg-white rounded-full shadow-xl mr-[20px] lg:mr-[40px]">
+                    <img class="w-[20px] h-[20px] mx-auto md:w-[35px] md:h-[30px]" src="src/icons/squares.svg"
+                      alt="icon" />
+                  </div>
+
+                  <p class="section-description text-left">
+                    Teachers don’t get lost in the grid view and have a dedicated Podium space.
+                  </p>
+                </li>
+                <li class="mb-[40px] flex items-center">
+                  <div
+                    class="px-[15px] h-[50px] flex items-center bg-white rounded-full shadow-xl mr-[20px] lg:mr-[40px]">
+                    <img class="w-[20px] h-[20px] mx-auto md:w-[35px] md:h-[30px]" src="src/icons/users-feature.svg"
+                      alt="icon" />
+                  </div>
+
+                  <p class="section-description text-left">
+                    Teachers don’t get lost in the grid view and have a dedicated Podium space.
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="flex items-center justify-between flex-col mb-[80px] md:mb-[160px] md:flex-row">
+            <div class="mb-[30px] text-center md:text-left md:mb-0">
+              <h3 class="feature__title w-full sm:w-[250px] mb-[20px] mx-auto md:mx-0">
+                Tools For Teachers And Learners
+              </h3>
+              <p class="section-description max-w-[90%] mx-auto md:mx-0 md:max-w-[420px]">
+                Class has a dynamic set of teaching tools built to be deployed and used during class.
+                Teachers can handout assignments in real-time for students to complete and submit.
+              </p>
+            </div>
+            <img class="max-w-full md:max-w-[450px] lg:max-w-[550px]" src="src/images/feature-tool-teachers.png"
+              alt="image" />
+          </div>
+
+          <div class="flex items-center justify-between flex-col-reverse mb-[80px] md:mb-[160px] md:flex-row">
+            <img class="max-w-full md:max-w-[400px] lg:max-w-[550px]" src="src/images/question-image.png" alt="image" />
+
+            <div class="mb-[30px] text-center md:text-left md:mb-0">
+              <h3 class="feature__title w-full sm:w-[300px] mb-[20px] mx-auto md:mx-0">
+                Assignments, Quizzes, Tests every week
+              </h3>
+              <p class="section-description max-w-[90%] mx-auto md:mx-0 md:max-w-[420px]">
+                Easily launch live assignments, quizzes, and tests.
+                Student results are automatically entered in the online gradebook.
+              </p>
+            </div>
+          </div>
+
+          <div class="flex items-center justify-between flex-col mb-[80px] md:mb-[160px] md:flex-row">
+            <div class="mb-[30px] text-center md:text-left md:mb-0">
+              <h3 class="feature__title w-full sm:w-[300px] mb-[20px] mx-auto md:mx-0">
+                Class Management Tools for Educators
+              </h3>
+              <p class="section-description max-w-[90%] mx-auto md:mx-0 md:max-w-[420px]">
+                Class provides tools to help run and manage the class such as Class Roster, Attendance, and more. With
+                the Gradebook,
+                teachers can review and grade tests and quizzes in real-time.
+              </p>
+            </div>
+
+            <img class="max-w-full md:max-w-[400px] lg:max-w-[550px]" src="src/images/grade-book.png" alt="image" />
+          </div>
+
+          <div class="flex items-center justify-between flex-col-reverse mb-[80px] md:mb-[160px] md:flex-row">
+            <img class="max-w-full md:max-w-[400px] lg:max-w-[550px]" src="src/images/discussion.png" alt="image" />
+
+            <div class="mb-[30px] text-center md:text-left md:mb-0">
+              <h3 class="feature__title w-full sm:w-[300px] mb-[20px] mx-auto md:mx-0">
+                One-on-One Discussions Class
+              </h3>
+              <p class="section-description max-w-[90%] mx-auto md:mx-0 md:max-w-[420px]">
+                Teachers and teacher assistants can talk with students privately without leaving the Zoom environment.
+              </p>
+            </div>
+          </div>
+
+          <a href="#"
+            class="feature__link  mx-auto hover:bg-brightRedLight hover:text-white duration-200 mb-[80px] md:mb-[160px]">
+            See more features
+          </a>
+
+          <div class="flex items-center justify-between flex-col-reverse mb-[80px] md:mb-[160px] md:flex-row">
+            <img class="max-w-full mr-5 md:max-w-[350px] lg:max-w-[550px]" src="src/images/apps.png" alt="image" />
+
+            <div class=" mb-[30px] text-center md:text-left md:mb-0">
+              <h4 class="feature__subtitle mb-[20px] w-[200px] mx-auto md:mb-[30px] md:mx-0">INTEGRATIONS</h4>
+              <h3 class="feature__title w-full sm:max-w-[400px] mb-[20px] mx-auto md:mx-0">
+                400+ educational tools and platform integrations
+              </h3>
+              <p class="section-description max-w-[90%] mx-auto mb-[40px] md:mx-0 md:max-w-[420px]">
+                Schoology has every tool your classroom needs and comes pre-integrated with more than 200+ tools,
+                student information
+                systems (SIS), and education platforms.
+              </p>
+              <a href="#" class="feature__link mx-auto hover:bg-brightRedLight hover:text-white duration-200 md:mx-0">
+                See All Integrations
+              </a>
+            </div>
+          </div>
+
+          <div class="flex items-center justify-between flex-col mb-[80px] md:mb-[160px] md:flex-row">
+            <div class=" mb-[60px] text-center md:text-left md:mb-0">
+              <h4 class="feature__subtitle mb-[20px] w-[200px] mx-auto md:mb-[30px] md:mx-0">TESTIMONIAL</h4>
+              <h3 class="feature__title w-full sm:max-w-[400px] mb-[20px] mx-auto md:mx-0">
+                What They Say?
+              </h3>
+              <p class="section-description max-w-[90%] mx-auto mb-[20px] md:mx-0 md:max-w-[420px]">
+                Skilline has got more than 100k positive ratings from our users around the world.
+              </p>
+              <p class="section-description max-w-[90%] mx-auto mb-[20px] md:mx-0 md:max-w-[420px]">
+                Some of the students and teachers were greatly helped by the Skilline.
+              </p>
+              <p class="section-description max-w-[90%] mx-auto mb-[40px] md:mx-0 md:max-w-[420px]">
+                Are you too? Please give your assessment
+              </p>
+              <a href="#"
+                class="testimonial relative py-[9px] pl-[20px] pr-[50px] rounded-[80px] border-2 border-brightRedLight text-brightRedLight text-center mx-auto hover:bg-brightRedLight hover:text-white duration-200 md:mx-0 sm:py-[20px] sm:pr-[80px]">
+                <span class="text-[13px]">Write your assessment</span>
+                <svg class="absolute top-0 right-0 w-[40px] sm:w-[63px] h-full" viewBox="0 0 80 80" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="40" cy="40" r="39.5" stroke="#EF8DB3" />
+                  <path
+                    d="M52.7071 40.7071C53.0976 40.3166 53.0976 39.6834 52.7071 39.2929L46.3431 32.9289C45.9526 32.5384 45.3195 32.5384 44.9289 32.9289C44.5384 33.3195 44.5384 33.9526 44.9289 34.3431L50.5858 40L44.9289 45.6569C44.5384 46.0474 44.5384 46.6805 44.9289 47.0711C45.3195 47.4616 45.9526 47.4616 46.3431 47.0711L52.7071 40.7071ZM27 41L52 41L52 39L27 39L27 41Z"
+                    fill="#EF8DB3" />
+                </svg>
+              </a>
+            </div>
+
+            <ul class="ml-0 md:ml-5">
+              <li class="relative">
+                <img class="w-[350px] rounded-xl mr-[100px]" src="src/images/smiling-woman.png" alt="image" />
+
+                <div
+                  class="absolute top-[75%] right-0 w-full shadow-lg p-[20px] rounded-xl border-l-8 border-[#CD356F] bg-white sm:w-[400px]">
+                  <p
+                    class="text-[#5F5F7E] text-[10px] border-l-[1px] border-[#BDBDD1] pl-[20px] mb-[20px] sm:text-[13px]">
+                    "Thank you so much for your help. It's exactly what I've been looking for. You won't regret it. It
+                    really saves me time
+                    and effort. Skilline is exactly what our business has been lacking."
+                  </p>
+                  <div class="flex items-center justify-between">
+                    <h6 class="pl-[20px] text-[#484848] text-[12px] font-semibold sm:text-[15px]">Gloria Rose</h6>
+                    <div>
+                      <div class="flex items-center justify-end mb-[12px]">
+                        <img class="w-[15px] sm:w-[18px]" src="src/icons/star.svg" alt="icon" />
+                        <img class="w-[15px] sm:w-[18px]" src="src/icons/star.svg" alt="icon" />
+                        <img class="w-[15px] sm:w-[18px]" src="src/icons/star.svg" alt="icon" />
+                        <img class="w-[15px] sm:w-[18px]" src="src/icons/star.svg" alt="icon" />
+                        <img class="w-[15px] sm:w-[18px]" src="src/icons/star.svg" alt="icon" />
+                      </div>
+                      <p class="text-[#5F5F7E] text-[10px] sm:text-[13px]">12 reviews at Yelp</p>
+                    </div>
+                  </div>
+                </div>
+              </li>
+
+            </ul>
           </div>
         </div>
       </section>
