added news section

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
               </a>
             </div>
 
-            <ul class="ml-0 md:ml-5">
+            <ul class="ml-0 md:ml-5 relative">
               <li class="relative">
                 <img class="w-[350px] rounded-xl mr-[100px]" src="src/images/smiling-woman.png" alt="image" />
 
@@ -456,6 +456,83 @@
                 </div>
               </li>
 
+              <button
+                class="hidden absolute top-[50%] translate-y-[-50%] z-50 px-[22px] py-[20px] rounded-full shadow-2xl bg-white sm:block sm:left-[300px] lg:left-[325px]">
+                <img class="w-[12px] h-[15px]" src="src/icons/arrow-right.svg" alt="icon" />
+              </button>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container mx-auto p-6">
+          <h2 class="section-title text-center mb-[10px]">Lastest News and Resources</h2>
+          <p class="section-description text-center mb-[60px] lg:mb-[100px]">See the developments that have occurred to
+            Skillines in
+            the world
+          </p>
+
+          <div class="flex justify-between flex-col items-center lg:flex-row lg:items-start">
+            <div class="max-w-full mb-10 lg:mb-0 lg:max-w-[400px] xl:max-w-[500px]">
+              <img class="mb-[40px] w-full" src="src/images/zoom.png" alt="image" />
+              <span
+                class="block w-[100px] py-[3px] text-center text-[15px] font-medium rounded-[80px] bg-brightRed text-white mb-[20px]">NEWS</span>
+              <h4 class="text-[15px] sm:text-[20px] font-medium text-titleColor mb-[20px]">
+                Class adds $30 million to its balance sheet for a Zoom-friendly edtech solution
+              </h4>
+              <p class="text-[13px] sm:text-[15px] text-descriptionColor mb-[20px]">
+                Class, launched less than a year ago by Blackboard co-founder Michael Chasen, integrates exclusively...
+              </p>
+              <a href="#" class="text-[16px] underline hover:no-underline">Read more</a>
+            </div>
+
+            <ul class="ml-[20px]">
+              <li class="flex flex-col max-w-[650px] w-full relative mb-[40px] sm:flex-row">
+                <img class="mr-[20px] h-[200px] mb-5 lg:mr-[40px] sm:mb-0 sm:h-[150px]" src="src/images/little-girl.png"
+                  alt="image" />
+                <span
+                  class="absolute top-[160px] sm:top-[110px] right-[30px] left-auto sm:right-auto sm:left-[100px] block w-[100px] py-[3px] text-center text-[12px] font-medium rounded-[80px] bg-brightRed text-white">PRESS
+                  RELEASE</span>
+                <div>
+                  <h4 class="text-[15px] lg:text-[18px] font-medium text-titleColor mb-[20px]">
+                    Class Technologies Inc. Closes $30 Million Series A Financing to Meet High Demand
+                  </h4>
+                  <p class="text-[13px] lg:text-[15px] text-descriptionColor">
+                    Class Technologies Inc., the company that created Class,...
+                  </p>
+                </div>
+              </li>
+
+              <li class="flex flex-col max-w-[650px] w-full relative mb-[40px] sm:flex-row">
+                <img class="mr-[20px] h-[200px] mb-5 lg:mr-[40px] sm:mb-0 sm:h-[150px]"
+                  src="src/images/zoom-meeting.png" alt="image" />
+                <span
+                  class="absolute top-[160px] sm:top-[110px] right-[30px] left-auto sm:right-auto sm:left-[100px] block w-[100px] py-[3px] text-center text-[12px] font-medium rounded-[80px] bg-brightRed text-white">NEWS</span>
+                <div>
+                  <h4 class="text-[15px] lg:text-[18px] font-medium text-titleColor mb-[20px]">
+                    Zoom’s earliest investors are betting millions on a better Zoom for schools
+                  </h4>
+                  <p class="text-[13px] lg:text-[15px] text-descriptionColor">
+                    Zoom was never created to be a consumer product. Nonetheless, the...
+                  </p>
+                </div>
+              </li>
+
+              <li class="flex flex-col max-w-[650px] w-full relative mb-[40px] sm:flex-row">
+                <img class="sm:mr-[20px] h-[200px] mb-5 lg:mr-[40px] sm:mb-0 sm:h-[150px]"
+                  src="src/images/classroom.png" alt="image" />
+                <span
+                  class="absolute top-[160px] sm:top-[110px] right-[30px] left-auto sm:right-auto sm:left-[100px] block w-[100px] py-[3px] text-center text-[12px] font-medium rounded-[80px] bg-brightRed text-white">NEWS</span>
+                <div>
+                  <h4 class="text-[15px] lg:text-[18px] font-medium text-titleColor mb-[20px]">
+                    Former Blackboard CEO Raises $16M to Bring LMS Features to Zoom Classrooms
+                  </h4>
+                  <p class="text-[13px] lg:text-[15px] text-descriptionColor">
+                    This year, investors have reaped big financial returns from betting on Zoom...
+                  </p>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
