--- a/index.html
+++ b/index.html
@@ -539,6 +539,45 @@
       </section>
     </main>
 
+    <footer class="bg-black">
+      <div class="container mx-auto p-6">
+        <div class="flex items-center justify-center pt-6 mb-[80px]">
+          <a class="w-[120px] pr-[30px]" href="#">
+            <img src="src/icons/footer-logo.svg" alt="logo" />
+          </a>
+          <h2 class="w-[160px] text-white text-[18px] font-semibold pl-[30px] border-l-2 border-descriptionColor">
+            Virtual Class for Zoom
+          </h2>
+        </div>
+
+        <form class="flex items-center flex-col mb-[80px]">
+          <h3 class="text-[#B2B3CF] text-[15px] sm:text-[20px] font-medium mb-[20px]">
+            Subscribe to get our Newsletter
+          </h3>
+
+          <div class="flex items-center flex-col gap-[20px] sm:flex-row">
+            <input
+              class="block max-w-[400px] w-full px-[30px] py-[15px] text-[15px] rounded-[80px] bg-transparent border-2 border-descriptionColor text-white"
+              type="text" placeholder="Your Email" />
+            <button
+              class="px-[30px] py-[13px] text-[18px] text-white bg-[#FC7E94] rounded-[80px] border-2 border-[#FC7E94] hover:bg-transparent duration-200">Subscribe</button>
+          </div>
+        </form>
+
+        <div class="flex items-center justify-center mb-[20px] flex-col sm:flex-row">
+          <a href="#"
+            class="text-[16px] text-descriptionColor sm:pr-[20px] border-descriptionColor hover:text-white duration-200 sm:border-r-2">Careers</a>
+          <a href="#"
+            class="text-[16px] text-descriptionColor sm:px-[20px] border-descriptionColor hover:text-white duration-200 sm:border-r-2">Privacy
+            Policy</a>
+          <a href="#" class="text-[16px] text-descriptionColor sm:pl-[20px] hover:text-white duration-200">Terms &
+            Conditions</a>
+        </div>
+
+        <p class="text-[16px] text-descriptionColor text-center">© 2021 Class Technologies Inc.</p>
+      </div>
+    </footer>
+
     <script src="src/js/script.js"></script>
   </body>
 </html>
